gitops/infra/storage/rook/base/rook-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
