gitops/infra/storage/rook/base/rook-dashboard-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-dashboard-ingress
  namespace: rook-ceph
spec:
  parentRefs:
  - name: http-gateway-netbird
    namespace: istio-ingress
    sectionName: https
  hostnames:
  - "rook.barracuda.net.konst.fish"
  rules:
  - backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 7000
