gitops/infra/storage/rook/base/rook-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-dashboard-ingress
  namespace: rook-ceph
spec:
  ingressClassName: nginx-netbird
  rules:
  - host: "rook.barracuda.net.konst.fish"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 7000
